<resources>
    <string name="app_name">Contact Manager</string>
    <string name="add_contact">Add Contact</string>
    <string name="address">Address</string>
    <string name="contact_list">Contact List</string>
    <string name="contact_manager">Contact Manager</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
</resources>
