<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rizmas.cobasatu.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp"
    tools:orientation="vertical">


    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

            </TabWidget>

            <FrameLayout

                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tabCreator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/contactTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:text="@string/contact_manager"
                        android:textSize="24dp"
                        tools:layout_editor_absoluteX="99dp"
                        tools:layout_editor_absoluteY="16dp"
                        tools:ignore="SpUsage" />

                    <ImageView
                        android:id="@+id/imageContactview"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="25dp"
                        app:srcCompat="@drawable/contact"
                        tools:ignore="ContentDescription" />

                    <EditText
                        android:id="@+id/txtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        tools:layout_editor_absoluteX="8dp"
                        tools:layout_editor_absoluteY="66dp" />

                    <EditText
                        android:id="@+id/txtPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        tools:layout_editor_absoluteX="8dp"
                        tools:layout_editor_absoluteY="109dp" />

                    <EditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        tools:layout_editor_absoluteX="8dp"
                        tools:layout_editor_absoluteY="152dp" />

                    <EditText
                        android:id="@+id/txtAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="@string/address"
                        android:inputType="textPostalAddress"
                        tools:layout_editor_absoluteX="8dp"
                        tools:layout_editor_absoluteY="195dp" />

                    <Button
                        android:id="@+id/btnAdd"
                        android:layout_width="150dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:enabled="false"
                        android:text="@string/add_contact"
                        tools:layout_editor_absoluteX="126dp"
                        tools:layout_editor_absoluteY="279dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tabList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/labelList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/contact_list"
                        android:textSize="24sp" />

                    <ListView
                        android:id="@+id/listV"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" />
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

</android.support.constraint.ConstraintLayout>
